--- a/public/css/home.css
+++ b/public/css/home.css
@@ -851,7 +851,7 @@
     background-image: url("../images/icons/event_bg.png");
 }
 /*TOP DEALS FRSME*/
-.top_deals_frame {
+.event_frame  .top_deals_frame {
     width: 335px;
     height: 214px;
     /*background-color: aqua;*/
@@ -861,7 +861,7 @@
     justify-content: space-between;
 }
 
-.top_deals_frame span{
+.event_frame  .top_deals_frame span{
     text-transform: capitalize;
     color: rgb(255, 255, 255);
     font-family: Jost;
@@ -871,14 +871,14 @@
     letter-spacing: 0%;
 }
 
-.top_deals_numbers {
+.event_frame  .top_deals_numbers {
     width: 100%;
     height: 62px;
 
     display: flex;
     justify-content: space-between;
 }
-.top_deals_numbers strong{
+.event_frame  .top_deals_numbers strong{
     color: rgb(255, 255, 255);
     font-family: Jost;
     font-size: 28px;
@@ -887,7 +887,7 @@
     letter-spacing: 0%;
 }
 
-.top_deals_numbers p{
+.event_frame  .top_deals_numbers p{
     color: rgb(255, 255, 255);
     font-family: Jost;
     font-size: 16px;
@@ -896,7 +896,7 @@
     letter-spacing: 0%;
 }
 
-.top_deals_frame .show_more_btn{
+.event_frame  .top_deals_frame .show_more_btn{
     width: 141px;
     height: 52px;
 
@@ -907,7 +907,7 @@
     background: rgb(245, 195, 75);
 }
 
-.show_more_btn a{
+.event_frame  .show_more_btn a{
     color: rgb(4, 30, 66);
     font-family: Jost;
     font-size: 15px;
@@ -916,7 +916,7 @@
     letter-spacing: 0%;
 }
 
-.event_product_box {
+.event_frame  .event_product_box {
     margin-left: 10px;
     width: 205px;
     height: 392px;
@@ -931,7 +931,7 @@
     background: rgb(255, 255, 255);
 }
 
-.event_product_box .product_img{
+.event_frame  .event_product_box .product_img{
     width: 100%;
     height: auto;
 
@@ -943,7 +943,7 @@
 }
 
 
-.product_img {
+.event_frame  .product_img {
     width: 195px;
     height: 220px;
 
@@ -951,13 +951,13 @@
 }
 
 
-.event_product_content_box {
+.event_frame  .event_product_content_box {
     margin-top: 20px;
     width: 168px;
     height: 150px;
 }
 
-.event_product_content_box  .product_title {
+.event_frame  .event_product_content_box  .product_title {
     color: rgb(98, 105, 116);
     font-family: Jost;
     font-size: 13px;
@@ -968,7 +968,7 @@
     text-transform: uppercase;
 }
 
-.event_product_content_box .product_desc{
+.event_frame  .event_product_content_box .product_desc{
 
     width: 178px;
     height: 56px;
@@ -981,7 +981,7 @@
     letter-spacing: 0%;
 }
 
-.event_product_content_box .review_box{
+.event_frame  .event_product_content_box .review_box{
     width: 165px;
     height: 23px;
 
@@ -992,12 +992,12 @@
     align-items: center;
 }
 
-.review_box img {
+.event_frame  .review_box img {
     width: 10px;
     height: 10px;
 }
 
-.event_product_content_box  .review_box span {
+.event_frame  .event_product_content_box  .review_box span {
     width: 90px;
     height: 23px;
 
@@ -1009,20 +1009,25 @@
     letter-spacing: 0%;
 }
 
-.event_image_box {
+.event_frame  .event_image_box {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
 }
 
-.event_frame .container {
+.event_frame  .event_frame .container {
     flex-direction: row;
     justify-content: center;
     align-items: center;
 }
 
-.event_frame .next_prev_box{
+.event_frame   .event_frame .next_prev_box{
     margin-left: 20px;
+}
+
+.event_image_box .next_prev_box{
+    margin-left: 10px;
+    transform: scaleX(-1);
 }
 
 
