--- a/public/css/home.css
+++ b/public/css/home.css
@@ -45,7 +45,7 @@
 }
 
 .container    .category_top  a:hover{
-    border-bottom: 1px  solid  rgb(4, 30, 66);;
+    border-bottom: 1px  solid  rgb(4, 30, 66);
 }
 
 /*PAGINATION*/
@@ -849,6 +849,7 @@
     /*background-color: red;*/
 
     background-image: url("../images/icons/event_bg.png");
+    background-size: cover;
 }
 /*TOP DEALS FRSME*/
 .event_frame  .top_deals_frame {
@@ -1029,6 +1030,269 @@
     margin-left: 10px;
     transform: scaleX(-1);
 }
+
+/*Footer Frame*/
+
+
+.footer_frame    {
+    width: 100%;
+    height: 507px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.footer_frame  .container{
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: auto;
+}
+
+
+.footer_frame   .footer_top{
+    width: 100%;
+    height: 250px;
+
+    display: flex;
+
+
+}
+
+.footer_frame   .footer_top_box{
+    width: 285px;
+    height: 200px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+}
+
+.footer_frame   .top_box_title{
+    color: rgb(4, 30, 66);
+    font-family: Jost;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 26px;
+    letter-spacing: 0%;
+
+}
+
+.footer_frame   .top_content{
+    display: flex;
+}
+
+.footer_frame   .top_content img{
+    width: 35px;
+    margin-right: 30px;
+}
+
+.footer_frame   .text_content strong{
+    margin-top: 20px;
+    display: block;
+
+
+    color: rgb(4, 30, 66);
+    font-weight: bold;
+    font-family: Jost;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: 0%;
+}
+
+.footer_frame   .text_content span{
+
+    color: rgb(4, 30, 66);
+    font-family: Jost;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: 0%;
+}
+
+.footer_frame   .footer_support_box{
+    margin-left: 70px;
+    width: 194px;
+    height: 240px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.footer_frame   .footer_support_box   .top_box_title{
+    margin-bottom: 10px;
+    color: rgb(4, 30, 66);
+    font-family: Jost;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 26px;
+    letter-spacing: 0%;
+}
+
+.footer_frame   .footer_support_box a{
+   color: rgb(4, 30, 66);
+    font-family: Jost;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 40px;
+    letter-spacing: 0%;
+}
+
+
+
+.footer_frame   .footer_support_box .social_box{
+    margin: 0  0 25px;
+    width: 155px;
+    height: 16px;
+
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.footer_frame   .social_box i{
+    color: rgb(4, 30, 66);
+    font-family: Font Awesome 5 Brands;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 16px;
+    letter-spacing: 0%;
+    text-align: left;
+    text-transform: capitalize;
+}
+
+.footer_frame   .mobile_apps_box{
+    width: 118px;
+    height: 80px;
+
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.footer_frame   .apple_logo_box img {
+    margin-right: 9px;
+    width: 21px;
+    height: 13px;
+}
+
+.footer_frame   .apple_logo_box span{
+    color: rgb(4, 30, 66);
+    font-family: Jost;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 40px;
+    letter-spacing: 0%;
+}
+
+
+.footer_frame   .footer_top .payment_wrapper{
+    width: 272px;
+    height: 70px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.footer_frame   .footer_top .payment_wrapper  .payment_box{
+
+    width: 100%;
+    height: 25px;
+
+    display: flex;
+    justify-content: space-between;
+}
+
+
+
+.footer_frame   .payment_container{
+    margin-left: 70px;
+    /*width: 194px;*/
+    height: 240px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+
+.footer_frame   .footer_bott{
+    margin-top: 90px;
+    width: 100%;
+    height: 61px;
+
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+
+    /*background-color: red;*/
+
+    border-top: 1px solid rgb(234, 234, 234);;
+
+}
+
+
+.footer_frame   .footer_bott .footer_bott_main{
+    width: 100%;
+    height: auto;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.footer_frame   .footer_bott_main  .footer_bott_left{
+    width: 560px;
+    height:auto;
+}
+
+.footer_frame   .footer_bott_main  .footer_bott_left span{
+    margin-right: 66px;
+    color: rgb(4, 30, 66);
+    font-family: Jost;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 40px;
+    letter-spacing: 0%;
+}
+
+.footer_frame   .footer_bott_main  .footer_bott_right{
+
+    width: 187px;
+    height: auto;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    border-radius: 6px;
+    border: 1px solid #EAEAEA;
+    background: #FFF;
+}
+
+.footer_frame   .footer_select_box span{
+    margin-right: 30px;
+    color: rgb(98, 105, 116);
+    font-family: Jost;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 40px;
+    letter-spacing: 0%;
+}
+
+.footer_frame   .footer_select_box select{
+    width: 73px;
+    border: none;
+    outline: none;
+}
+
+
 
 
 
