--- a/public/css/command.css
+++ b/public/css/command.css
@@ -1,6 +1,9 @@
 :root{
     font: "Jost";
 }
+*{
+    font-family: "Jost";
+}
 
 html , body{
     margin: 0;
@@ -13,6 +16,8 @@ a{
 p{
     margin: 0;
 }
+
+
 
 /* NAVBAR  STARTED */
 
@@ -318,9 +323,112 @@ p{
 
 
 
+/*Shop Category*/
 
 
-/* NAVBAR FINISHED */
+.shop_category_frame{
+    position: relative;
+    margin-top: 90px;
+    width: 100%;
+    height: auto;
+
+    display: flex;
+    justify-content: center;
+}
+.shop_category_frame .container{
+    flex-direction: column;
+
+}
+
+.shop_category_frame  .container  .category_wrapper{
+    margin-top: 30px;
+    width: 100%;
+    height: auto;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.shop_category_frame  .category_wrapper .category_box{
+    width: 142px;
+    height: auto;
+    cursor: pointer;
+
+    display: flex;
+    flex-direction: column;
+}
+
+.shop_category_frame  .category_box .category_img_box{
+    width: 100%;
+    height: 150px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    border: 1px solid rgb(234, 234, 234);
+    border-radius: 150px;
+}
+.shop_category_frame  .category_box span{
+    margin-top: 15px;
+    color: rgb(4, 30, 66);
+    font-family: var(--font);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
+    letter-spacing: 0%;
+    text-align: center;
+}
+
+
+
+
+/*CATEGORY  TOP*/
+
+.container .category_top{
+    width: 100%;
+    height: auto;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+.container .category_top div{
+    display: flex;
+    flex-direction: row;
+
+}
+.container .category_top span{
+    color: rgb(4, 30, 66);
+
+    font-family: var(--font);
+    font-size: 28px;
+    font-weight: 400;
+    line-height: 40px;
+    letter-spacing: 0%;
+    text-transform: capitalize;
+}
+
+.container  .category_top  a{
+    margin-left: 30px;
+    color: rgb(4, 30, 66);
+    font-family: var(--font);
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: 0%;
+    text-transform: capitalize;
+
+}
+
+.container    .category_top  a:hover{
+    border-bottom: 1px  solid  rgb(4, 30, 66);
+}
+
 
 /*Footer Frame*/
 
@@ -577,10 +685,68 @@ p{
     letter-spacing: 0%;
 }
 
-.footer_frame   .footer_select_box select{
+.footer_frame   .footer_select_box select {
     width: 73px;
     border: none;
     outline: none;
+
+
+
+}
+
+
+/*PAGINATION*/
+
+
+.pagination_box{
+    margin-top: 30px;
+    width: 100%;
+    height: auto;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.pagination_box .pagination_main{
+    width: auto;
+    height: 24px;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.pagination_main .pagination_dot{
+    margin: 0 20px;
+    display: flex;
+    flex-direction: row;
+}
+
+.pagination_main img{
+    cursor: pointer;
+}
+
+.pagination_dot .dot{
+    width: 20px;
+    height: 20px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+}
+.pagination_dot .dot.active{
+    border: 2px solid #112137;
+
+
+}
+
+.pagination_dot .dot div{
+    width: 4px;
+    height: 4px;
+    background: #112137;
+    border-radius: 50%;
 }
 
 
