--- a/public/css/all.css
+++ b/public/css/all.css
@@ -236,7 +236,7 @@
 
     width: 220px;
     height: 392px;
-
+    margin-right: 2px;
     border: 1px  solid rgb(240, 232, 232);
     box-sizing: border-box;
     
@@ -248,7 +248,7 @@
 
 }
 
-.product_box_text{
+.product_wrapper   .product_box_text{
    
     margin: 16px 0  0 20px;
 
@@ -257,7 +257,7 @@
 
 
 }
-.product_box_text .title_product{
+.product_wrapper  .product_box_text .title_product{
     color: rgb(98, 105, 116);
     font-family: Jost;
     font-size: 13px;
@@ -268,7 +268,7 @@
     text-transform: uppercase;
 }
 
-.product_box_text p{
+.product_wrapper  .product_box_text p{
     width: 100%;
     height: 56px;
     overflow: hidden;
@@ -283,6 +283,7 @@
 .product_box img{
     width: 179px ;
     height: 190px;
+    
 
     border: 1px dashed  rgba(207, 201, 201, 0.658);
 
@@ -317,7 +318,7 @@
 
 
 .review_box{
-    margin-bottom: 100px;
+    /* margin-bottom: 100px; */
     width: 177px;
     height: 23px;
 
@@ -343,6 +344,189 @@
     line-height: 22px;
     letter-spacing: 0%;
 }
+
+
+/* inner_frame */
+
+.inner_frame{
+    margin-top: 30px;
+    width: 100%;
+    height: auto;
+
+    display: flex;
+    justify-content: center;
+}
+
+
+.inner_frame .container{
+    height: auto;
+
+    display: flex;
+    flex-direction: column;
+
+}
+
+/* .inner_category{
+    width: 646px;
+    height: auto;
+} */
+
+.inner_category span{
+    color: rgb(4, 30, 66);
+    font-family: Jost;
+    font-size: 28px;
+    font-weight: 400;
+    line-height: 40px;
+    letter-spacing: 0%;
+}
+
+.inner_category p{
+    color: rgb(4, 30, 66);
+    font-family: Jost;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: 0%;
+}
+
+.inner_category_box{
+    width: 298px;
+    height: 36px;
+    margin-top: 41px;
+    display: flex;
+    flex-direction: row;
+    
+}
+.category_box_one{
+    width: 92px;
+    height: 36px;
+    margin-right: 15px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    border-radius: 60px;
+
+    background: rgb(243, 245, 246);
+}
+
+.category_box_one select{
+    border: none;
+    outline:none;
+
+    color: rgb(4, 30, 66);
+    font-family: Jost;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: 0%;
+
+    background: rgb(243, 245, 246);
+
+}
+
+.category_wrapper{
+    width: 101%;
+    margin-top: 30px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.category_content_box{
+    width: 263px;
+    height: 452px;
+    border: 1px solid rgb(210, 193, 193);
+
+}
+
+.category_content_box .category_img_box{
+    width: 253px;
+    height: 280px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.category_content_box .category_img_box img{
+    width: 215px;
+    height: 230px;
+}
+
+.category_content_text{
+    width: 100%;
+    height: auto;
+
+    padding: 20px;
+    box-sizing: border-box;
+}
+
+.category_content_text span{
+    margin-bottom: 0;
+    color: rgb(98, 105, 116);
+    font-family: Jost;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: 0%;
+}
+
+.inner_pagination{
+    margin-bottom: 50px;
+    width: 100%;
+    height: 50px;
+    margin-top: 50px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.inner_pagination .inner_pagination_box{
+    width: 460px;
+    height: 50px;
+    /* background-color: rgb(238, 188, 188); */
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.inner_pagination .inner_pagination_box img{
+    width: 50px;
+    height: 50px;
+    border: 1px solid grey;
+    border-radius: 50%;
+}
+
+.inner_pagination .inner_pagination_box div{
+    width: 50px;
+    height: 50px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.yellow_background{
+    background-color: rgb(250, 186, 57);
+    border-radius: 50%;
+}
+
+.grey_background{
+    background-color: rgba(128, 128, 128, 0.148);
+    border-radius: 50%;
+}
+
+
+
+
+
+
+
 
 
 
