--- a/public/css/choosenProduct.css
+++ b/public/css/choosenProduct.css
@@ -352,6 +352,63 @@
     margin-left: 15px;
 }
 
+/* description_frame */
+
+.description_frame{
+    margin-top: 20px;
+    width: 100%;
+    height: auto;
+
+    display: flex;
+    justify-content: center;
+}
+.description_frame .container{
+    position: relative;
+    height: 57px;
+
+    align-items: center;
+    border-top: 2px solid rgb(234, 234, 234);
+    border-bottom: 2px solid rgb(234, 234, 234);
+}
+
+.description_frame .description_wrapper{
+    position: relative;
+    width: 1148px;
+    height: 47px;
+    
+    display: flex;
+    flex-direction: row;
+
+    justify-content: space-between;
+    align-items: center;
+}
+
+.description_frame .description_wrapper div{
+    position: absolute;
+    width: 84px;
+    height: 2px;
+    background: rgb(4, 30, 66);
+    bottom: -6px;
+}
+
+.description_frame .description_wrapper a{
+    color: rgb(98, 105, 116);
+    font-family: Jost;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 26px;
+    letter-spacing: 0%;
+}
+
+.description_frame .description_wrapper a:first-of-type{
+    color: rgb(0, 0, 0);
+    font-family: Jost;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 26px;
+    letter-spacing: 0%;
+}
+
 
 
 
