--- a/public/css/choosenProduct.css
+++ b/public/css/choosenProduct.css
@@ -409,6 +409,130 @@
     letter-spacing: 0%;
 }
 
+/* product_information_frame */
+
+
+.product_information_frame{
+    margin: 30px 0 ;
+    margin-top: 30px;
+    width: 100%;
+    height: 720px;
+
+    display: flex;
+    justify-content: center;
+}
+
+
+.product_information_frame .container .product_information_wrapper{
+    display: flex;
+    flex-direction: column;
+}
+
+.product_information_frame .container .product_information_wrapper .top_info p{
+    color: rgb(4, 30, 66);
+    font-family: Jost;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
+    letter-spacing: 0%;
+}
+
+.product_information_frame .container .product_information_wrapper .bott_info{
+    margin-top: 30px;
+    width: 948px;
+    height: 585px;
+
+
+    display: flex;
+    flex-direction: column;
+
+
+}
+
+.product_information_frame .container .product_information_wrapper .bott_info .more_info{
+    margin-bottom: 20px;
+    color: rgb(4, 30, 66);
+    font-family: Jost;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 29px;
+    letter-spacing: 0%;
+
+}
+
+.product_information_frame .container .product_information_wrapper .bott_info .power_info span{
+    color: rgb(4, 30, 66);
+    font-family: Jost;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
+    letter-spacing: 0%;
+}
+
+.power_info ul{
+    margin-left: 18px;
+    padding: 0;
+} 
+
+.power_info ul li{
+    color: rgb(4, 30, 66);
+    font-family: Jost;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 40px;
+    letter-spacing: 0%;
+    text-indent: 10px;
+}
+
+.power_info ul li::marker{
+    /* Ellipse 70 */
+   font-size: 10px;
+   margin-right: 200px;
+  
+   color: rgb(4, 30, 66);
+}
+
+.display_info{
+    margin-top: 30px;
+    width: 948px;
+    height: 238px;
+
+}
+
+.display_info span{
+    color: rgb(4, 30, 66);
+    font-family: Jost;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
+    letter-spacing: 0%;
+}
+
+.display_info ul{
+    margin-left: 18px;
+    padding: 0;
+} 
+
+.display_info ul li{
+    color: rgb(4, 30, 66);
+    font-family: Jost;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 40px;
+    letter-spacing: 0%;
+    text-indent: 10px;
+}
+
+.display_info ul li::marker{
+   font-size: 10px;
+   margin-right: 200px;
+  
+   color: rgb(4, 30, 66);
+}
+
+
+
+
 
 
 
