--- a/public/css/command.css
+++ b/public/css/command.css
@@ -543,6 +543,7 @@ p{
 .footer_frame    {
     width: 100%;
     height: 507px;
+    background: rgb(243, 245, 246);
 
     display: flex;
     flex-direction: column;
